fix image resizing flicker

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -44,6 +44,7 @@ body, html, #root, main {
     height: 100%;
 }
 
+
 main {
     background-color: $Cream;
     display: flex;
@@ -67,6 +68,7 @@ main {
             border-radius: 10px;
             overflow: hidden;
             align-items: center;
+            
 
             .product-card-image {
                 display: flex;
@@ -75,7 +77,7 @@ main {
 
                 picture {
                     flex: 1;
-                    
+
                     img {
                         width: 100%;
                         height: 100%;
@@ -188,13 +190,21 @@ main {
 
         @media only screen and (max-width: 767px) {
             .product-card {
-                // max-width: 344px;
                 grid-template-columns: 1fr;
                 grid-template-rows: auto auto;
 
+                .product-card-image {
+                    picture {
+                        img {
+                            max-width: 600px;
+                            max-height: 420px;
+                        }
+                    }
+                }
+
                 .product-card-info {
                     padding: 24px;
-
+                    
                     .card-label {
                         margin-bottom: 14px;
                     }
